--- a/SarowaLibrary.DataAccessLayer/SarowaLibrary.DataAccessLayer.csproj
+++ b/SarowaLibrary.DataAccessLayer/SarowaLibrary.DataAccessLayer.csproj
@@ -4,15 +4,16 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>9.0.2.1</Version>
+    <Authors>Sarowa36</Authors>
+    <RepositoryUrl>https://github.com/sarowa36/SarowaLibrary</RepositoryUrl>
+    <Copyright>You can use how you want mf.</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SarowaLibrary.EntityLayer\SarowaLibrary.EntityLayer.csproj" />
+    <PackageReference Include="SarowaLibrary.EntityLayer" Version="9.0.2" />
   </ItemGroup>
 
 </Project>
